[gd_scene load_steps=5 format=3 uid="uid://dbwuqf2oql4bi"]

[ext_resource type="Script" path="res://scenes/ui/elements/buttons/menu_button.gd" id="1_2sih6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ph1j4"]
content_margin_left = 15.0
content_margin_top = 5.0
content_margin_right = 15.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1a3i"]
content_margin_left = 15.0
content_margin_top = 5.0
content_margin_right = 15.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6v56x"]
content_margin_left = 15.0
content_margin_top = 5.0
content_margin_right = 15.0
content_margin_bottom = 5.0

[node name="MenuButton" type="Button"]
scale = Vector2(0.5, 0.5)
size_flags_vertical = 8
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_ph1j4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t1a3i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6v56x")
text = "Menu Button"
script = ExtResource("1_2sih6")

[node name="Underline" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 4)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -2.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
color = Color(0.698039, 0.698039, 0.698039, 1)

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
